[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xftool"
version = "0.6"
description = "高精度数学与 X11 图形工具箱"
readme = "README.md"
authors = [{ name="tinagongtt-lang" }]
requires-python = ">=3.7"
dependencies = [
    "gmpy2",
]

[tool.setuptools]
# 显式指定要包含的文件夹，解决 Multiple top-level packages 报错
packages = ["xmath", "xfX11"]

[project.urls]
"Homepage" = "https://github.com/tinagongtt-lang/xftool"